--- a/sase.tex
+++ b/sase.tex
@@ -77,7 +77,7 @@ I_{\text{det},j}(x,y) \approx I_B(\mathbf{q}(x,y,\omega_j)) \cdot G_B(x,y,\omega
 \end{equation}
 An approximate fractional change in intensity due to jitter:
 \begin{equation}
-\frac{\Delta I_{\text{det}}}{I_{\text{det}}} \approx \left|\frac{\partial \ln I}{\partial q}\right|\frac{\Delta E}{E}\,|\mathbf{q}|.
+\frac{\Delta I_{\text{det}}}{I_{\text{det}}} \approx \left|\nabla_{\mathbf{q}} \ln I \cdot \frac{\mathbf{q}}{|\mathbf{q}|}\right|\frac{\Delta E}{E}\,|\mathbf{q}|.
 \end{equation}
 
 \subsubsection*{Question}
