--- a/sase.tex
+++ b/sase.tex
@@ -8,8 +8,7 @@
 \usepackage{mathtools}
 \usepackage[margin=1in]{geometry}
 
-\title{Effect of SASE Pulse Properties on X-ray Scattering Measurements}
-\author{Author}
+\title{Differentiable modeling of x-ray scattering}
 \date{\today}
 
 \begin{document}
