--- a/sase.tex
+++ b/sase.tex
@@ -118,7 +118,7 @@ I_{\text{SASE},j}(\omega)\,d\omega.
 \end{equation}
 
 \subsubsection*{Implementation}
-Measure or reconstruct each pulse's spectral profile (single-shot spectrometers). Discretize and integrate numerically.
+Measure or reconstruct each pulse's spectral profile per shot. Discretize and integrate numerically.
 
 \section{Practical Implications}
 
